create new post form

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,8 @@
             <p>Free ad posting here.</p>
             <ul class="nav">
               <li><a href="#/"> Home </a></li>
-              <li><a href="#add"> Create a Listing </a></li>
+              <li><a href="#add"> Create a listing </a></li>
+              <li><a href="#posts"> View all posts </a></li>
             </ul>
           </div>
           <div ng-view></div>
@@ -36,6 +37,7 @@
         <!-- Angular Scripts -->
     <script type="text/javascript" rel="javascript" src="controllers/addController.js"></script>
     <script type="text/javascript" rel="javascript" src="controllers/homeController.js"></script>
+    <script type="text/javascript" rel="javascript" src="controllers/postsController.js"></script>
     <script type="text/javascript" rel="javascript" src="app.js"></script>
   </body>
 </html>
