--- a/public/index.html
+++ b/public/index.html
@@ -7,44 +7,93 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="css/style.css"/>
     <!-- Google Maps API -->
     <script type="text/javascript" rel="javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDWzWXTmQHUU3OHr2bKeRUn4dNE5PUtpxk"></script>
     <!-- JS Source -->
     <script type="text/javascript" rel="javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script type="text/javascript" rel="javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28//angular-route.min.js"></script>
-    <script type="text/javascript" rel="javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+    <script type="text/javascript" rel="javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <script>
+      $(function() {
+        $( "#calendar" ).datepicker();
+      });
+    </script>
   </head>
 
   <body>
-    <div class="container">
-      <section class="container-fluid">
-        <div class="col-md-12 row">
-          <div class="col-md-3">
-            <h2>PLH</h2>
-            <h4>Free ad posting here!</h4>
-            <ul class="nav">
-              <li><a href="#/"> Home </a></li>
-              <li><a href="#add"> Create a listing </a></li>
-              <li><a href="#posts"> View all posts </a></li>
-              <br>
-              <div class="input-group">
-                <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
-                <input type="text" class="form-control" ng-model="query" placeholder="Search...">
-              </div>
-            </ul>
-          </div>
-          <div class="col-md-8 col-md-offset-1">
-            <div ng-view></div>
+    <!-- START navbar -->
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <div class="col-md-12 col-md-offset-2">
+            <a class="navbar-brand" href="#home">PLH - Post free ads</a>
           </div>
         </div>
-      </section>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <form class="navbar-form navbar-right" role="search">
+            <div class="input-group">
+              <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
+              <input type="text" class="form-control" ng-model="query" placeholder="Search...">
+            </div>
+          </form>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#home">Home <span class="sr-only">(current)</span></a></li>
+            <li><a href="#add"> Create a listing </a></li>
+            <li><a href="#posts"> View all posts </a></li>
+            <li class="dropdown">
+              <a href="#locations" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Location <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="#us">United States</a></li>
+                <li><a href="#vn">Viet Nam</a></li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a href="#languages" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Language <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="#en">English</a></li>
+                <li><a href="#vnm">Vietnamese</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+    <!-- END navbar -->
+    <div class="container">
+      <div class="col-md-2">
+        <div class="bs-sidebar hidden-print affix well well-lg">
+          <ul class="left-sidebar-nav nav nav-list">
+            <li><a href="#add">Create a listing</a></li>
+            <li><a href="#posts">View all posts</a></li>
+            <li><a href="#calendar">Calendar</a></li>
+            <li>
+              <div id="calendar"></div>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-md-9 col-md-offset-1">
+        <div ng-view></div>
+      </div>
     </div>
     <!-- Angular Scripts -->
     <script type="text/javascript" rel="javascript" src="controllers/addController.js"></script>
     <script type="text/javascript" rel="javascript" src="controllers/homeController.js"></script>
     <script type="text/javascript" rel="javascript" src="controllers/postsController.js"></script>
+    <script type="text/javascript" rel="javascript" src="controllers/viewController.js"></script>
     <script type="text/javascript" rel="javascript" src="app.js"></script>
   </body>
 </html>
