--- a/public/index.html
+++ b/public/index.html
@@ -54,14 +54,14 @@
             <li><a href="#add"> Create a listing </a></li>
             <li><a href="#posts"> View all posts </a></li>
             <li class="dropdown">
-              <a href="#locations" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Location <span class="caret"></span></a>
+              <a href="!" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Location <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="#us">United States</a></li>
                 <li><a href="#vn">Viet Nam</a></li>
               </ul>
             </li>
             <li class="dropdown">
-              <a href="#languages" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Language <span class="caret"></span></a>
+              <a href="!" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Language <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="#en">English</a></li>
                 <li><a href="#vnm">Vietnamese</a></li>
@@ -76,9 +76,9 @@
       <div class="col-md-2">
         <div class="bs-sidebar hidden-print affix well well-lg">
           <ul class="left-sidebar-nav nav nav-list">
-            <li><a href="#add">Create a listing</a></li>
-            <li><a href="#posts">View all posts</a></li>
-            <li><a href="#calendar">Calendar</a></li>
+            <li><a href="/add">Create a listing</a></li>
+            <li><a href="/posts">View all posts</a></li>
+            <li><a href="/calendar">Calendar</a></li>
             <li>
               <div id="calendar"></div>
             </li>
@@ -92,6 +92,7 @@
     <!-- Angular Scripts -->
     <script type="text/javascript" rel="javascript" src="controllers/addController.js"></script>
     <script type="text/javascript" rel="javascript" src="controllers/homeController.js"></script>
+    <script type="text/javascript" rel="javascript" src="controllers/homeVnmController.js"></script>
     <script type="text/javascript" rel="javascript" src="controllers/postsController.js"></script>
     <script type="text/javascript" rel="javascript" src="controllers/viewController.js"></script>
     <script type="text/javascript" rel="javascript" src="app.js"></script>
